stylesheets/commons/Panels.scss
/*******************************************************************************
Template(s): Panels
Author(s): FO-nTTaX
*******************************************************************************/
// Add html prefix to get higher specificity
html .panel-box {
	margin-bottom: 10px;
	border: 0.0625rem solid var( --panel-box-border-color, var( --wiki-bordercolor-light ) );

	&.wiki-bordercolor-light {
		border-color: var( --panel-box-border-color, var( --wiki-bordercolor-light ) );
	}
}

// Add html prefix to get higher specificity
html .panel-box-heading {
	font-size: 18px;
	font-weight: bold;
	padding: 5px 10px;
	background-color: var( --panel-header-background-color, var( --wiki-color-light ) );
	border-bottom: 0.0625rem solid var( --panel-box-border-color, var( --wiki-bordercolor-light ) );
	color: var( --panel-box-color );

	&.wiki-bordercolor-light {
		border-color: var( --panel-box-border-color, var( --wiki-bordercolor-light ) );
	}
}

.panel-box-heading:not( :first-child ) {
	border-top: 1px solid;
	border-top-color: inherit;
}

.panel-box-heading > small {
	font-weight: bold;
}

.panel-box-body {
	padding: 10px;
}

.panel-box-body.panel-box-body--no-padding {
	padding: 0;
}

/* New */
.mainpage-v2 {
	.panel-box {
		box-shadow: 0 0.0625rem 0.25rem 0 rgba( 0, 0, 0, 0.12 );
		border: 0;
		border-radius: 0.5rem;

		&.is--collapsed {
			.panel-box-heading {
				border-radius: 0.5rem;

				&-icon {
					transform: rotate( 180deg );
				}
			}

			.panel-box-collapsible-content {
				display: none;
			}
		}
	}

	.panel-box-heading {
		display: flex;
		align-items: center;
		background-color: var( --clr-wiki-theme-primary, var( --wiki-color-medium ) );
		color: #ffffff;
		border: 0;
		border-radius: 0.5rem 0.5rem 0 0;
		min-height: 3rem;
		padding: 0 1rem;
		font-size: 1rem;

		&-icon {
			height: 1.5rem;
			width: 1.5rem;
			display: flex;
			align-items: center;
			justify-content: center;
			cursor: pointer;
			opacity: 0.7;
			margin-right: 0.75rem;
			transform-origin: center;
			transition: transform 0.2s linear;
		}

		@media ( hover: hover ) {
			&:hover .panel-box-heading-icon {
				opacity: 1;
			}
		}
	}

	.panel-box-body {
		border-radius: 0 0 0.5rem 0.5rem;
		padding: 1rem;

		.theme--light & {
			background-color: #ffffff;
		}

		.theme--dark & {
			background-color: #26292d;

			hr {
				background-color: var( --clr-secondary-25 );
			}
		}
	}
}

